src/style/App.css
* {
  color: lightgray;
}

.parallax {
  /* The image used */
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../img/girl-gymnast-exercise-3840x2400.jpg");

  /* Set a specific height */
  height: 105vh;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

